trunk/Archive2/bd/bee958c49e1299/output
main.cpp:25:37: error: expected ';' after do/while statement
        } while(++source != r.end())
                                    ^
                                    ;
1 error generated.
